--- a/README.Rmd
+++ b/README.Rmd
@@ -81,10 +81,10 @@ profile_logliks(fit) # Profile log-likelihood functions
 
 # Quantile residual diagnostics
 diagnostic_plot(fit) # type=c("all", "series", "ac", "ch", "norm")
-qrt <- quantile_residual_tests(fit, nsimu=10000)
+qrt <- quantile_residual_tests(fit, nsim=10000)
 
 # Simulate a sample path from the estimated process
-sim <- simulate(fit, nsimu=100)
+sim <- simulate(fit, nsim=100)
 plot.ts(sim$sample)
 
 # Forecast future values of the process
@@ -101,7 +101,7 @@ predict(fit, n_ahead=12)
 # Estimate structural GMVAR(2,2) model identified with sign constraints:
 W22 <- matrix(c(1, 1, -1, 1), nrow=2, byrow=FALSE)
 fit22s <- fitGSMVAR(gdpdef, p=2, M=2, structural_pars=list(W=W22),
-                   ncalls=20, seeds=1:20, ncores=2)
+                    ncalls=20, seeds=1:20, ncores=2)
 fit22s
 
 # Alternatively, if there are two regimes (M=2), a stuctural model can 
