fixed typos in vignette

--- a/vignettes/gmvarkit-vignette.tex
+++ b/vignettes/gmvarkit-vignette.tex
@@ -1321,9 +1321,9 @@ The algorithm proceeds with the following steps.
 
 \item Draw an initial value $\boldsymbol{y}_{t-1}$ from $G$.\label{step1}
 
-\item Draw $H+1$ independent realizations of a shock $\varepsilon_t$ from $N(0,I_d)$. If the models contains Student's $t$ regime, the Gaussian shocks are used obtain shocks from the appropriate Student's $t$ distributions (in this case, $H+1$ independent realizations of shocks from $\chi^2_{\nu_m + dp}$-distributions are also drawn for the $t$-regimes). Also, draw an initial regime $m\in \lbrace 1,...,M \rbrace$ according to the probabilities given by the mixing weights $\alpha_{1,t},...,\alpha_{M,t}$ and compute the reduced form shock $u_t$. If identification by heteroskedasticity is used, $u_t=W\Lambda_m^{1/2}\varepsilon_t$, where $\Lambda_1=I_d$. If the shocks are, instead, identified recursively, $u_t=L_t\varepsilon_t$, where $L_t$ is the lower triangular matrix obtained from the Cholesky decomposition $\Omega_t = L_tL_t'$ and $\Omega_t$ is the conditional covariance matrix of the process. Then, compute the structural shock $e_t = B_t^{-1}u_t$ and impose the size $\delta_j$ on its $j$th element to obtain $e_t^*$. Finally, calculate the modified reduced form shock $u_t^*=B_te_t^*$.\label{step2} %\footnote{The independent standard normal shocks $\varepsilon_t$ are introduced here to control random variation across the two sample paths $y_{t+n}^{(i)}(\delta_j,\boldsymbol{y}_{t-1})$ and $y_{t+n}^{(i)}(\boldsymbol{y}_{t-1})$.}
+\item Draw $H+1$ independent realizations of a shock $\varepsilon_t$ from $N(0,I_d)$. If the models contains Student's $t$ regime, the Gaussian shocks are used obtain shocks from the appropriate Student's $t$ distributions (in this case, $H+1$ independent realizations of shocks from $\chi^2_{\nu_m + dp}$-distributions are also drawn for the $t$-regimes). Also, draw an initial regime $m\in \lbrace 1,...,M \rbrace$ according to the probabilities given by the mixing weights $\alpha_{1,t},...,\alpha_{M,t}$ and compute the reduced form shock $u_t$. If identification by heteroskedasticity is used, $u_t=W\Lambda_m^{1/2}\varepsilon_t$, where $\Lambda_1=I_d$. If the shocks are, instead, identified recursively, $u_t=L_t\varepsilon_t$, where $L_t$ is the lower triangular matrix obtained from the Cholesky decomposition $\Omega_t = L_tL_t'$ and $\Omega_t$ is the conditional covariance matrix of the process. Then, compute the structural shock $e_t = B_t^{-1}u_t$ and impose the size $\delta_j$ on its $j$th element to obtain $e_t^*$. Finally, calculate the modified reduced form shock $u_t^*=B_te_t^*$.\label{step2}
 
-\item Use the modified reduced form shock $u_t^*$ and the rest $H$ standard normal shocks $\varepsilon_t$ obtained from Step~\ref{step2} to compute realizations $y_{t+h}^{(i)}(\delta_j,\boldsymbol{y}_{t-1})$ for $n=0,1,...,H$, iterating forward so that in each iteration the regime $m$ that generates the observation is first drawn according to the probabilities given by the mixing weights. At $h=0$, the initial regime and the modified reduced form shock $u_t^*$ calculated from the structural shock in Step~\ref{step2} is used. From $h=1$ onwards, the $h+1$th standard normal shock $\varepsilon_t$ is used to calculate the reduced form shock $u_{t+h}=W\Lambda_m^{1/2}\varepsilon_{t+h}$, where $\Lambda_1=I_d$ and $m$ is the selected regime (note that only the reduced form shocks are of interest with $h>0$, so the same formula can be used for recursively identified shocks here).
+\item Use the modified reduced form shock $u_t^*$ and the rest $H$ standard normal shocks $\varepsilon_t$ obtained from Step~\ref{step2} to compute realizations $y_{t+h}^{(i)}(\delta_j,\boldsymbol{y}_{t-1})$ for $h=0,1,...,H$, iterating forward so that in each iteration the regime $m$ that generates the observation is first drawn according to the probabilities given by the mixing weights. At $h=0$, the initial regime and the modified reduced form shock $u_t^*$ calculated from the structural shock in Step~\ref{step2} is used. From $h=1$ onwards, the $h+1$th standard normal shock $\varepsilon_t$ is used to calculate the reduced form shock $u_{t+h}=W\Lambda_m^{1/2}e_{t+h}$, where $\Lambda_1=I_d$ and $m$ is the selected regime (note that only the reduced form shocks are of interest with $h>0$, so the same formula can be used for recursively identified shocks here).
 
 \item  Use the reduced form shock $u_t$ and the rest $H$ the standard normal shocks $\varepsilon_t$ obtained from  Step~\ref{step2} to compute realizations $y_{t+h}^{(i)}(\boldsymbol{y}_{t-1})$ for $h=0,1,...,H$, so that the reduced form shock $u_t$ (calculated in Step~\ref{step2}) is used to compute the time $h=0$ realization. Otherwise proceed similarly to the previous step.
 
